イベントアーカイブ取得に成仏ステータスフィルターを追加
